--- a/web/css/assets/css/style_default.css
+++ b/web/css/assets/css/style_default.css
@@ -38,7 +38,10 @@ body {
 #sidebar > ul > li a i {
    color: #999 !important;
 }
-
+.error_list
+{
+color: #ff0000;
+}
 #sidebar > ul > li >a:hover, #sidebar > ul > li:hover>a {
   color: #fff !important;
   text-shadow: 0 1px 0 rgba(0, 0, 0, .25);
