--- a/web/css/assets/css/style.css
+++ b/web/css/assets/css/style.css
@@ -181,8 +181,9 @@ a,a:focus, a:hover, a:active {
 
 /*logo*/
 #header .brand {
-  margin-top: -1px !important;
+  margin-top: -11px !important;
   width: 102px;
+  height:50px;
 }
 
 /* header nav bar*/
@@ -266,7 +267,13 @@ a,a:focus, a:hover, a:active {
 #header .navbar-search {
   margin-left: 110px;
 }
-
+#header .top-nav {
+background: #ffffff url('../img/line.jpg') repeat-y;
+}
+#header #header_name{
+ margin:-30px 0px 0px 245px; 
+ color: #FFFFFF;
+ }
 #header .top-nav .dropdown-menu {
   margin-top: 3px;
 }
@@ -286,7 +293,6 @@ a,a:focus, a:hover, a:active {
 
 /* main container */
 #container {
-
 }
 
 .fixed-top #container {
@@ -298,13 +304,15 @@ a,a:focus, a:hover, a:active {
     1min-height: 20px !important;
 }
 
+
 /* body container */
 #body {  
   margin-top: 7px;
   margin-left: 215px; 
   min-height: 600px;    
-  background: #f7f7f7 url("../img/body-bg.png"); 
-  border-bottom: 2px solid #ddd;
+  background: #f7f7f7 url("../images/body-bg.png");  
+  border-bottom: 2px solid #ddd; 
+  padding: 8px 8px 100px;
 }
 
 /* page container */
@@ -454,6 +462,9 @@ a,a:focus, a:hover, a:active {
   padding: 8px 20px 5px 20px; 
   font-size: 12px;
   color: #999;
+  text-align:center;
+ /* position: relative;*/
+  /* bottom: -50px; */
 }
 
 #footer .go-top { 
@@ -1322,7 +1333,9 @@ ul.item-list.todo li .actions {
     -webkit-border-radius: 0px 0px 4px 4px;
        -moz-border-radius: 0px 0px 4px 4px;
             border-radius: 0px 0px 4px 4px;
-  margin-bottom: -37px;   
+  margin-bottom: -37px; 
+height:100px;
+width:100px;  
 }
 
 #login i {
