--- a/web/css/assets/css/style.css
+++ b/web/css/assets/css/style.css
@@ -1991,3 +1991,16 @@ width:100px;
 	border-radius:8px; 
 	width: 500px;
 }
+
+.header_not_signed_in{
+padding: 0px 450px 0px; 
+background: url('../img/bgColor.jpg') repeat-x;  
+margin: 10px 15px 0px; 
+border-radius: 8px;
+}
+
+.footer_not_signed_in{
+margin: 20px; 
+background: url('../img/bgColor.jpg') repeat-x; 
+border-radius: 8px;
+}
