--- a/web/css/assets/css/style.css
+++ b/web/css/assets/css/style.css
@@ -1928,7 +1928,8 @@ width:100px;
 }
 
 .portlet-tabs .nav-tabs > li > a {
-  padding-top: 9px;
+  color: #fff;
+  padding-top: 6px;
   padding-bottom: 10px;
   line-height: 16px;
   margin-left: 0px;
@@ -1945,7 +1946,7 @@ width:100px;
 }
 
 .portlet-tabs .nav-tabs > .active {
-  border-top: 3px solid #d12610;
+  border-top: 3px solid #FFE303;
 }
 
 .portlet-tabs .nav-tabs > li {
@@ -1953,6 +1954,7 @@ width:100px;
 }
 
 .portlet-tabs .nav-tabs > li > a:hover {   
+  color: #555555;
   margin-bottom: 0px;
   border-bottom: 0;
   margin-left: 0px;
@@ -1965,12 +1967,19 @@ width:100px;
 }  
 
 .portlet-tabs .nav-tabs > .active > a  {
-  color: #555555;
+  color: #fff;
   cursor: default;
-  background-color: #f9f9f9;
+  background-color: #236B8E;
+  background-image: -webkit-gradient(linear, 0 0%, 0 100%, from(#236B8E), to(#82CFFD));
+  background-image: -webkit-linear-gradient(top, #236B8E 0%, #82CFFD 100%);
+  background-image: -moz-linear-gradient(top, #236B8E 0%, #82CFFD 100%);
+  background-image: -ms-linear-gradient(top, #236B8E 0%, #82CFFD 100%);
+  background-image: -o-linear-gradient(top, #236B8E 0%, #82CFFD 100%);
+  background-image: -linear-gradient(top, #236B8E 0%, #82CFFD 100%);
 }
 
 .portlet-tabs .nav-tabs > .active > a:hover {
+  color: #555555;
   background-color: #f9f9f9 !important;
 }
 
